plugins/kotlin/idea/tests/testData/multiplatform/diamondActualInBottom/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in bottom module'")!>A<!>
